Fix css alignment.
Former-commit-id: 4bae3b9a0a96e2b8ca8e5ec7b56cb67531a26b60

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -162,6 +162,11 @@ span.musicTimes {
     padding-left: 3px;
 }
 
+.statusSpansHolder {
+    padding-bottom: 1px;
+    margin-top: -1px;
+}
+
 #statusWeather {
     white-space: pre-wrap;
     font-family: monospace;
